--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tokio = { version = "1.37.0", features = ["rt", "macros", "rt-multi-thread"] }
-axum = "0.7.5"
-tower-http = { version = "0.5.2" ,features = ["trace"]}
-dotenv = "0.15.0"
-tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
+tokio = { version = "1.42.0", features = ["full"] }
+axum = "0.7.9"
+tower-http = { version = "0.6.2", features = ["trace"] }
+dotenvy = "0.15.7"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
